# django-cockroachdb

./: CHANGELOG.md  Dockerfile  README.md  docker.sh  setup.cfg  setup.py
.github/workflows/: linters.yml  tests.yml
cockroach/django/: base.py  client.py  creation.py  features.py  functions.py  introspection.py  operations.py  schema.py  utils.py
django-test-suite/: build.sh  cockroach_gis_settings.py  cockroach_settings.py
django_cockroachdb/: __init__.py  base.py  client.py  creation.py  features.py  functions.py  introspection.py  lookups.py  operations.py  schema.py  utils.py
django_cockroachdb_gis/: base.py  features.py  functions.py  introspection.py  operations.py  schema.py
teamcity-build/: build-flake8.sh  build-isort.sh  build-teamcity-19.2.sh  build-teamcity-20.1.sh  build-teamcity-20.2.sh  build-teamcity-21.1.sh  build-teamcity-21.2.sh  build-teamcity-22.1.sh  build-teamcity-22.2-psycopg2.sh  build-teamcity-22.2-server-side-binding.sh  build-teamcity-22.2.sh  build-teamcity-nightly.sh  build-teamcity.sh  cockroach_gis_settings.py  cockroach_settings.py  runtests.py
