[metadata]
name = django-cockroachdb
version = attr: django_cockroachdb.__version__
url = https://github.com/cockroachdb/django-cockroachdb
maintainer = Cockroach Labs
maintainer_email = python@cockroachlabs.com
license = Apache Software License
description = Django backend for CockroachDB
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 5.2
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Source = https://github.com/cockroachdb/django-cockroachdb
    Tracker = https://github.com/cockroachdb/django-cockroachdb/issues

[options]
python_requires = >=3.10
packages = find:
install_requires =
#     django >= 5.2, < 6.0

[flake8]
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 79
multi_line_output = 5
